; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_sslapitest.c_generate_stateless_cookie_callback.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_sslapitest.c_generate_stateless_cookie_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i64*)* @generate_stateless_cookie_callback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @generate_stateless_cookie_callback(i32* %0, i8* %1, i64* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64* %2, i64** %6, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = call i32 @generate_cookie_callback(i32* %9, i8* %10, i32* %7)
  store i32 %11, i32* %8, align 4
  %12 = load i32, i32* %7, align 4
  %13 = zext i32 %12 to i64
  %14 = load i64*, i64** %6, align 8
  store i64 %13, i64* %14, align 8
  %15 = load i32, i32* %8, align 4
  ret i32 %15
}

declare dso_local i32 @generate_cookie_callback(i32*, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
